# telegram_ci_bot

./: Cargo.toml  job_create.sh  job_update.sh  sqlx-data.json  status.sh
.github/workflows/: rust.yml
migrations/: 20221107105629_repo.down.sql  20221107105629_repo.up.sql  20221110070856_job.down.sql  20221110070856_job.up.sql
src/: main.rs
src/app/: mod.rs
src/app/config/: database.rs  mod.rs  task.rs
src/app/middleware/auth/: layer.rs  service.rs
src/app/middleware/config/: layer.rs  mod.rs  service.rs
src/app/service/: job.rs  mod.rs  root.rs  status.rs
src/app/service/bot/: handler.rs  state.rs
src/app/util/: error.rs  mod.rs  sentry.rs
