[package]
name = "telegram_ci_bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["stdout"]
stdout = []

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
teloxide = { version = "0.11.1", features = ["macros", "redis-storage", "bincode-serializer"] }
sentry = "0.27.0"
sentry-backtrace = "0.27.0"
sentry-core = "0.27.0"
sentry-tracing = "0.27.0"
serde = { version = "1.0.145", features = ['derive'] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = { version = "0.3.3", default-features = false }
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ['env-filter'] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ['derive'] }
axum = "0.5.17"
hyper = { version = "0.14.22", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
futures = "0.3.25"
futures-util = "0.3.25"
time = "0.3.16"
tokio-stream = "0.1.11"
sentry-tower = { version = "0.27.0", features = ["http"] }
http = "0.2.8"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros", "offline"] }
chrono = { version = "0.4.22", features = ["serde"] }

[dev-dependencies]
fakeit = "1.1.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"
